a really big commit with fixes